SERVER-46302 Modified bump_transaction_prevents_extra_deletion_task_write.js to fix a race in verifying deletion task removal on recipient