src/mongo/db/s/migration_destination_manager.cpp
@@ -218,7 +218,6 @@ MONGO_FAIL_POINT_DEFINE(migrateThreadHangAtStep6);
 
 MONGO_FAIL_POINT_DEFINE(failMigrationOnRecipient);
 MONGO_FAIL_POINT_DEFINE(failMigrationReceivedOutOfRangeOperation);
-MONGO_FAIL_POINT_DEFINE(hangOnRecipientFailure);
 
 }  // namespace
 
@@ -799,8 +798,6 @@ void MigrationDestinationManager::_migrateThread() {
             _migrateDriver(opCtx);
         }
     } catch (...) {
-        log() << "In catch handler";
-        hangOnRecipientFailure.pauseWhileSet();
         _setStateFail(str::stream() << "migrate failed: " << redact(exceptionToStatus()));
     }
 
